fixed right panel overflow

--- a/css/mainLayout.css
+++ b/css/mainLayout.css
@@ -7,6 +7,7 @@ body, html, div {
 body {
 	/*display: flex;*/
 	/*flex-direction: column;*/
+	overflow: hidden;
 }
 
 * {
